Replace prepublish with prepare script

--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "react-native-web-lottie",
+  "name": "@alloy-city/react-native-web-lottie",
   "version": "1.4.1",
   "description": "React Native for Web implementation of Lottie",
   "main": "dist/index.js",
   "main-es": "src/index.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:react-native-web-community/react-native-web-lottie.git"
+    "url": "git+ssh://git@github.com/react-native-web-community/react-native-web-lottie.git"
   },
-  "author": {
-    "name": "Louis Lagrange",
-    "email": "lagrange.louis@gmail.com",
-    "url": "https://github.com/Minishlink"
-  },
+  "author": "Louis Lagrange <lagrange.louis@gmail.com> (https://github.com/Minishlink)",
   "license": "MIT",
   "keywords": [
     "react-native",
@@ -20,7 +16,7 @@
     "lottie-react-native"
   ],
   "scripts": {
-    "prepublish": "yarn build",
+    "prepare": "yarn build",
     "build": "mkdir -p dist && babel src --out-dir dist --copy-files",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -56,5 +52,12 @@
   },
   "dependencies": {
     "lottie-web": "^5.4.4"
+  },
+  "bugs": {
+    "url": "https://github.com/react-native-web-community/react-native-web-lottie/issues"
+  },
+  "homepage": "https://github.com/react-native-web-community/react-native-web-lottie#readme",
+  "directories": {
+    "doc": "docs"
   }
 }
